<resources>
    <string name="app_name">All in One</string>
    <string name="the_long_process_made_simple">The long process \nmade simple.</string>
    <string name="putallworries">Put all worries aside and complete all your works\njust by dialing a phone number \nfrom your home.</string>
    <string name="we_are_expanding_our_reaches">We are expanding \nour reaches.</string>
    <string name="we_are_happy_to_list_any_vendor_if_they_want_to_work_with_us_contact_us_for_get_an_overview_of_listing_scheme">We are happy to list any vendor if they \nwant to work with us. Contact us for get \nan overview of listing scheme.</string>
    <string name="we_are_worried_about_your_safety">We are worried \nabout your safety.</string>
    <string name="home_delivery_will_be_carried_by_ensuring_total_safety_measures_and_sanitization_with_gloves">Home delivery will be carried by ensuring \ntotal safety measures and sanitization \nwith gloves.</string>
    <string name="signup">Signup</string>
    <string name="log_in">Log in</string>
    <string name="what_do_you_like_to_find">What do you like to find?</string>
    <string name="create_an_account">Create an account</string>
    <string name="fullname">Fullname</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="forget_password">Forget Password?</string>
    <string name="search">Search</string>
    <string name="contact_us">Contact us</string>
    <string name="general_services">General Services</string>
    <string name="food_services">Food Services</string>
    <string name="Message">Message</string>
    <string name="call_us">Call us</string>
    <string name="direct_whatsapp">Direct Whatsapp</string>
    <string name="repairing_service">Repairing Service</string>
    <string name="share">Share</string>
    <string name="Rating">Rating</string>
    <string name="username">Ajay</string>
    <string name="user_email">ajayumat90@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="this_app_is_solely_made_to_simplify_client_s_requirements_for_various_services_and_many_more_things_as_the_indian_way_you_can_whatsapp_or_text_message_to_any_vendor_for_inquiries_and_buy_stuffs_you_ll_get_in_direct_touch_with_vendor_without_any_middleman_or_having_any_troubles">This app is solely made to simplify client\'s requirements for various services and many more things. As the \'Indian\' way, you can WhatsApp or Text Message to any vendor for inquiries and buy stuffs. You\'ll get in direct touch with vendor without any middleman or having any troubles.</string>

</resources>