<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SignInActivity">

    <ImageView
        android:id="@+id/imgbackbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_arrow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size_50dp"
        android:fontFamily="@font/gilroy_regular"
        android:text="@string/welcome_back"
        android:textColor="#121212"
        android:textSize="@dimen/size_24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/ic_username"
            android:drawablePadding="@dimen/size_20dp"
            android:hint="@string/fullname"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/txtcolor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/size_20dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/txtcolor" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/size_10dp"
            android:text="@string/forget_password"
            android:layout_marginEnd="@dimen/size_16dp"
            android:textColor="@color/green" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_48dp"
            android:background="@drawable/button"
            android:padding="@dimen/size_20dp"
            android:text="Sign up"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:textAllCaps="false"
            android:textColor="@color/txtbutton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#808085" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:text="or" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#808085" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:background="@drawable/loginbutton"
            android:padding="@dimen/size_20dp"
            android:text="Login"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/green" />

    </LinearLayout>

</LinearLayout>