<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DashBoardActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        tools:context=".ui.DashBoardActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/size_16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_extrabold"
                        android:text="Hey Ibrahim"
                        android:textColor="#121212"
                        android:textSize="@dimen/size_24sp"
                        android:textStyle="bold" />



                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/size_50dp"
                    android:layout_height="@dimen/size_50dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="@dimen/size_10dp">

                    <ImageView
                        android:id="@+id/imageProfiledashboard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/placeholder" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>



            <TextView
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_16dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/food_services"
                android:textColor="#121212"
                android:textSize="@dimen/size_24sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFoodServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:clipToPadding="false"
                android:padding="@dimen/size_16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_16dp"
                android:layout_marginTop="@dimen/size_32dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/general_services"
                android:textColor="#121212"
                android:textSize="@dimen/size_24sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGeneralServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:clipToPadding="false"
                android:padding="@dimen/size_16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_16dp"
                android:layout_marginTop="@dimen/size_32dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/repairing_service"
                android:textColor="#121212"
                android:textSize="@dimen/size_24sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRepairServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:layout_marginBottom="@dimen/size_16dp"
                android:clipToPadding="false"
                android:padding="@dimen/size_16dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/contactus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:background="@drawable/button"
        android:layout_marginBottom="@dimen/size_16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/size_16dp">

        <TextView
            android:layout_height="match_parent"
            android:fontFamily="@font/gilroy_bold"
            android:layout_width="wrap_content"
            android:textSize="@dimen/size_17dp"
            android:layout_gravity="bottom"
            android:text="@string/contact_us"
            android:textAllCaps="false"
            android:textColor="@color/txtbutton" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/size_10dp"
            android:src="@drawable/ic_phone" />

    </LinearLayout>

</LinearLayout>